--- a/languages.toml
+++ b/languages.toml
@@ -1,5 +1,6 @@
 # Language support configuration.
 # See the languages documentation: https://docs.helix-editor.com/master/languages.html
+use-grammars = { except = [ "hare", "wren", "gemini", "lean" ] }
 
 [language-server]
 
