Add bookmarks support
ref: https://github.com/helix-editor/helix/issues/5167
ref: https://github.com/helix-editor/helix/pull/10905

--- a/helix-term/Cargo.toml
+++ b/helix-term/Cargo.toml
@@ -49,6 +49,7 @@ helix-lsp = { path = "../helix-lsp" }
 helix-dap = { path = "../helix-dap" }
 helix-vcs = { path = "../helix-vcs" }
 helix-loader = { path = "../helix-loader" }
+helix-parsec = { path = "../helix-parsec" }
 
 anyhow = "1"
 once_cell = "1.20"
